[gd_scene load_steps=2 format=3 uid="uid://e4fghi8aajkl"]

[ext_resource type="Script" path="res://scripts/powerup_choice.gd" id="1_powerup_choice"]

[node name="PowerupChoice" type="PanelContainer"]
custom_minimum_size = Vector2(200, 250)
script = ExtResource("1_powerup_choice")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Powerup Name"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Common"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Description here"
autowrap_mode = 3

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="BanishButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Banish"
